# universal_manipulation

./: .gitignore  LICENSE  README.md  conda_environment.yaml  run_slam_pipeline.py
calibration/: CMakeLists.txt  README.md  package.xml
calibration/scripts/: bag_creater.py  create_bag.py  create_setting_file.py  data_preprocess.py  test.py
calibration/yaml/: apriltag_config.yaml
config/: aruco_config.yaml  camera_intrinsics.json  setting.yaml
scripts/: calibrate_gripper_range.py  calibrate_slam_tag.py  detect_aruco.py
scripts_slam_pipeline/: 00_process_videos_and_umi.py  01_process_videos_and_imu.py  01_process_videos_and_umi.py  02_create_map.py  03_batch_slam.py  04_detect_aruco.py  05_run_calibrations.py  06_generate_dataset_plan.py  test.py
utils/: __init__.py  cv_util.py  imu_util.py  interpolation_util.py  pose_util.py  timecode_util.py
videos/20240311_154750/: imu_data.json
videos/demos/mapping/: map_atlas.osa  slam_stderr.txt  slam_stdout.txt
