<?xml version="1.0" encoding="utf-8"?>
<package>
  <name>calibration</name>
  <version>0.0.1</version>
  <description>Package used for calibration</description>
  <maintainer email="12112921@mail.sustech.edu.cn">Junlin Wang</maintainer>
  <author>Junlin Wang</author>
  <license>MIT License</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>rosbag</depend>
</package>
